Fixed logging and refactoring